--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 04:05:07 2018</p>
+         Last Run: Tue Nov 20 05:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>74</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>72</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>70</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "74",
-                 "72",
-                 "70"
+                 "73",
+                 "71",
+                 "69"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 04:05:07 2018</p>
+         Last Run: Tue Nov 20 05:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Overcast</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>4</td>
-                        <td>63</td>
+                        <td>19</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>89</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,23 +261,23 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>57</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>84</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>0</td>
-                        <td>-3</td>
-                        <td>5</td>
-                        <td>54</td>
+                        <td>-2</td>
+                        <td>4</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>NNW</td>
-                        <td>79</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -285,11 +285,11 @@
                         <td>0</td>
                         <td>-2</td>
                         <td>4</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>ENE</td>
-                        <td>65</td>
+                        <td>E</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -319,7 +319,7 @@
                "data":[
                  "-5",
                  "-3",
-                 "-3",
+                 "-2",
                  "-2"
                ]
              },
@@ -391,9 +391,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "19",
                  "4",
                  "4",
-                 "5",
                  "4"
                ]
              },
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
-                 "57",
-                 "54",
-                 "55"
+                 "64",
+                 "58",
+                 "55",
+                 "56"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
-                 "84",
-                 "79",
-                 "65"
+                 "93",
+                 "92",
+                 "86",
+                 "70"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 04:05:07 2018</p>
+         Last Run: Tue Nov 20 05:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -482,8 +482,8 @@
                         <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-3</td>
-                        <td>11</td>
-                        <td>59</td>
+                        <td>4</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>6</td>
                         <td>W</td>
@@ -494,11 +494,11 @@
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>11</td>
-                        <td>53</td>
+                        <td>4</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>44</td>
                      </tr>
                      <tr>
@@ -507,10 +507,10 @@
                         <td>1</td>
                         <td>-1</td>
                         <td>3</td>
-                        <td>50</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WNW</td>
+                        <td>NW</td>
                         <td>44</td>
                      </tr>
                   </tbody>
@@ -609,8 +609,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "11",
-                 "11",
+                 "4",
+                 "4",
                  "3"
                ]
              },
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
-                 "53",
-                 "50"
+                 "60",
+                 "55",
+                 "52"
                ]
              },
              {
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 04:05:07 2018</p>
+         Last Run: Tue Nov 20 05:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -696,13 +696,13 @@
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
-                        <td>-6</td>
-                        <td>2</td>
+                        <td>-5</td>
+                        <td>3</td>
                         <td>67</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SW</td>
-                        <td>33</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -714,7 +714,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>32</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,11 +722,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>68</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>33</td>
+                        <td>46</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,7 +753,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
+                 "-5",
                  "-6",
                  "-6"
                ]
@@ -824,7 +824,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "3",
                  "3",
                  "3"
                ]
@@ -837,7 +837,7 @@
                "data":[
                  "67",
                  "67",
-                 "68"
+                 "66"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "32",
-                 "33"
+                 "50",
+                 "47",
+                 "46"
                ]
              }
            ]
