--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 05:05:12 2018</p>
+         Last Run: Tue Nov 20 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,9 +34,9 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>SSW</td>
                         <td>73</td>
                      </tr>
@@ -46,9 +46,9 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>SSW</td>
                         <td>71</td>
                      </tr>
@@ -58,7 +58,7 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "57",
-                 "59"
+                 "53",
+                 "56",
+                 "60"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 05:05:12 2018</p>
+         Last Run: Tue Nov 20 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Overcast</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>19</td>
-                        <td>64</td>
+                        <td>20</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>93</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,11 +261,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>92</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -273,23 +273,23 @@
                         <td>0</td>
                         <td>-2</td>
                         <td>4</td>
-                        <td>55</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NNW</td>
-                        <td>86</td>
+                        <td>NNE</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>0</td>
-                        <td>-2</td>
+                        <td>-3</td>
                         <td>4</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>E</td>
-                        <td>70</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -320,7 +320,7 @@
                  "-5",
                  "-3",
                  "-2",
-                 "-2"
+                 "-3"
                ]
              },
              {
@@ -391,7 +391,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "19",
+                 "20",
                  "4",
                  "4",
                  "4"
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
-                 "58",
-                 "55",
-                 "56"
+                 "63",
+                 "57",
+                 "54",
+                 "55"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "93",
                  "92",
-                 "86",
-                 "70"
+                 "91",
+                 "85",
+                 "68"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 05:05:12 2018</p>
+         Last Run: Tue Nov 20 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -481,11 +481,11 @@
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-1</td>
-                        <td>-3</td>
-                        <td>4</td>
-                        <td>60</td>
+                        <td>-4</td>
+                        <td>3</td>
+                        <td>61</td>
                         <td>1</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>W</td>
                         <td>44</td>
                      </tr>
@@ -498,7 +498,7 @@
                         <td>55</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>44</td>
                      </tr>
                      <tr>
@@ -510,7 +510,7 @@
                         <td>52</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NW</td>
+                        <td>WNW</td>
                         <td>44</td>
                      </tr>
                   </tbody>
@@ -538,7 +538,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-4",
                  "-2",
                  "-1"
                ]
@@ -609,7 +609,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
+                 "3",
                  "4",
                  "3"
                ]
@@ -620,7 +620,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
+                 "61",
                  "55",
                  "52"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 05:05:12 2018</p>
+         Last Run: Tue Nov 20 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -696,13 +696,13 @@
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
-                        <td>-5</td>
+                        <td>-6</td>
                         <td>3</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SW</td>
-                        <td>50</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,11 +710,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>47</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,11 +722,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>66</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>46</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,7 +753,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
+                 "-6",
                  "-6",
                  "-6"
                ]
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "67",
-                 "66"
+                 "68",
+                 "68",
+                 "68"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "47",
-                 "46"
+                 "48",
+                 "45",
+                 "44"
                ]
              }
            ]
