--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 07:05:06 2018</p>
+         Last Run: Tue Nov 20 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>18</td>
                         <td>SSW</td>
-                        <td>72</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>70</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>68</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "72",
-                 "70",
-                 "68"
+                 "73",
+                 "71",
+                 "69"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 07:05:06 2018</p>
+         Last Run: Tue Nov 20 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Overcast</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>20</td>
+                        <td>19</td>
                         <td>63</td>
                         <td>0</td>
                         <td>8</td>
@@ -258,8 +258,8 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>4</td>
                         <td>57</td>
                         <td>0</td>
@@ -276,7 +276,7 @@
                         <td>54</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>N</td>
+                        <td>NNE</td>
                         <td>84</td>
                      </tr>
                      <tr>
@@ -285,10 +285,10 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>E</td>
+                        <td>ESE</td>
                         <td>68</td>
                      </tr>
                   </tbody>
@@ -318,7 +318,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-4",
+                 "-3",
                  "-2",
                  "-3"
                ]
@@ -331,7 +331,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-1",
+                 "0",
                  "0",
                  "0"
                ]
@@ -391,7 +391,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "20",
+                 "19",
                  "4",
                  "4",
                  "4"
@@ -406,7 +406,7 @@
                  "63",
                  "57",
                  "54",
-                 "56"
+                 "55"
                ]
              },
              {
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 07:05:06 2018</p>
+         Last Run: Tue Nov 20 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -482,8 +482,8 @@
                         <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>61</td>
+                        <td>3</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
@@ -497,7 +497,7 @@
                         <td>4</td>
                         <td>55</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>W</td>
                         <td>44</td>
                      </tr>
@@ -505,11 +505,11 @@
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>-2</td>
+                        <td>-1</td>
                         <td>3</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WNW</td>
                         <td>44</td>
                      </tr>
@@ -540,7 +540,7 @@
                "data":[
                  "-4",
                  "-2",
-                 "-2"
+                 "-1"
                ]
              },
              {
@@ -609,7 +609,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
+                 "3",
                  "4",
                  "3"
                ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
+                 "60",
                  "55",
-                 "53"
+                 "52"
                ]
              },
              {
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 07:05:06 2018</p>
+         Last Run: Tue Nov 20 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -702,7 +702,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>48</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -714,7 +714,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>45</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -726,7 +726,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>44</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "48",
-                 "45",
-                 "44"
+                 "49",
+                 "46",
+                 "45"
                ]
              }
            ]
